[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/World.gd" type="Script" id=1]
[ext_resource path="res://scenes/MyTileSet.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[node name="World" type="Node" index="0"]

script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -786433, 10, 0, -851968, 10, 0, -851967, 10, 0, -851966, 10, 0, -851965, 10, 0, -851964, 10, 0, -851963, 10, 0, -851962, 10, 0, -851961, 10, 0, -851960, 10, 0, -851959, 10, 0, -851958, 10, 0, -851957, 10, 0, -851956, 10, 0, -720897, 10, 0, -786432, 1, 0, -786431, 1, 0, -786430, 1, 0, -786429, 1, 0, -786428, 1, 0, -786427, 2, 0, -786426, 2, 0, -786425, 1, 0, -786424, 1, 0, -786423, 1, 0, -786422, 1, 0, -786421, 1, 0, -786420, 10, 0, -655361, 10, 0, -720896, 1, 0, -720895, 16, 0, -720894, 15, 0, -720893, 14, 0, -720892, 4, 0, -720891, 0, 0, -720890, 0, 0, -720889, 8, 0, -720888, 16, 0, -720887, 15, 0, -720886, 14, 0, -720885, 1, 0, -720884, 10, 0, -589825, 10, 0, -655360, 1, 0, -655359, 17, 0, -655358, 10, 0, -655357, 13, 0, -655356, 4, 0, -655355, 0, 0, -655354, 0, 0, -655353, 8, 0, -655352, 17, 0, -655351, 10, 0, -655350, 13, 0, -655349, 1, 0, -655348, 10, 0, -524289, 10, 0, -589824, 1, 0, -589823, 17, 0, -589822, 10, 0, -589821, 13, 0, -589820, 4, 0, -589819, 0, 0, -589818, 0, 0, -589817, 8, 0, -589816, 17, 0, -589815, 10, 0, -589814, 13, 0, -589813, 1, 0, -589812, 10, 0, -458753, 10, 0, -524288, 1, 0, -524287, 17, 0, -524286, 10, 0, -524285, 13, 0, -524284, 4, 0, -524283, 0, 0, -524282, 0, 0, -524281, 8, 0, -524280, 17, 0, -524279, 10, 0, -524278, 13, 0, -524277, 1, 0, -524276, 10, 0, -393217, 10, 0, -458752, 1, 0, -458751, 17, 0, -458750, 10, 0, -458749, 13, 0, -458748, 4, 0, -458747, 0, 0, -458746, 0, 0, -458745, 8, 0, -458744, 17, 0, -458743, 10, 0, -458742, 13, 0, -458741, 1, 0, -458740, 10, 0, -327681, 10, 0, -393216, 1, 0, -393215, 17, 0, -393214, 10, 0, -393213, 13, 0, -393212, 4, 0, -393211, 0, 0, -393210, 0, 0, -393209, 8, 0, -393208, 17, 0, -393207, 10, 0, -393206, 13, 0, -393205, 1, 0, -393204, 10, 0, -262145, 10, 0, -327680, 1, 0, -327679, 17, 0, -327678, 10, 0, -327677, 13, 0, -327676, 4, 0, -327675, 0, 0, -327674, 0, 0, -327673, 8, 0, -327672, 17, 0, -327671, 10, 0, -327670, 13, 0, -327669, 1, 0, -327668, 10, 0, -196609, 10, 0, -262144, 1, 0, -262143, 17, 0, -262142, 10, 0, -262141, 13, 0, -262140, 4, 0, -262139, 0, 0, -262138, 0, 0, -262137, 8, 0, -262136, 17, 0, -262135, 10, 0, -262134, 13, 0, -262133, 1, 0, -262132, 10, 0, -131073, 10, 0, -196608, 1, 0, -196607, 17, 0, -196606, 10, 0, -196605, 13, 0, -196604, 4, 0, -196603, 0, 0, -196602, 0, 0, -196601, 8, 0, -196600, 17, 0, -196599, 10, 0, -196598, 13, 0, -196597, 1, 0, -196596, 10, 0, -65537, 10, 0, -131072, 1, 0, -131071, 18, 0, -131070, 11, 0, -131069, 12, 0, -131068, 4, 0, -131067, 0, 0, -131066, 0, 0, -131065, 8, 0, -131064, 18, 0, -131063, 11, 0, -131062, 12, 0, -131061, 1, 0, -131060, 10, 0, -13, 10, 0, -12, 10, 0, -11, 10, 0, -10, 10, 0, -9, 10, 0, -8, 10, 0, -7, 10, 0, -6, 10, 0, -5, 10, 0, -4, 10, 0, -3, 10, 0, -2, 10, 0, -1, 10, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 4, 0, -65531, 0, 0, -65530, 0, 0, -65529, 8, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 10, 0, -65523, 10, 0, -65522, 10, 0, -65521, 10, 0, -65520, 10, 0, -65519, 10, 0, -65518, 10, 0, -65517, 10, 0, -65516, 10, 0, -65515, 10, 0, -65514, 10, 0, -65513, 10, 0, 65523, 10, 0, 65524, 1, 0, 65525, 1, 0, 65526, 1, 0, 65527, 1, 0, 65528, 1, 0, 65529, 1, 0, 65530, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 4, 0, 5, 0, 0, 6, 0, 0, 7, 8, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 17, 0, 17, 10, 0, 18, 10, 0, 19, 10, 0, 20, 10, 0, 21, 10, 0, 22, 10, 0, 23, 10, 0, 131059, 10, 0, 131060, 1, 0, 131061, 1, 0, 131062, 1, 0, 131063, 1, 0, 131064, 1, 0, 131065, 1, 0, 131066, 1, 0, 131067, 16, 0, 131068, 14, 0, 131069, 1, 0, 131070, 1, 0, 131071, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 4, 0, 65541, 0, 0, 65542, 0, 0, 65543, 8, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 17, 0, 65553, 10, 0, 65554, 10, 0, 65555, 10, 0, 65556, 10, 0, 65557, 10, 0, 65558, 10, 0, 65559, 10, 0, 196595, 10, 0, 196596, 1, 0, 196597, 1, 0, 196598, 1, 0, 196599, 1, 0, 196600, 1, 0, 196601, 1, 0, 196602, 1, 0, 196603, 18, 0, 196604, 12, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 4, 0, 131077, 0, 0, 131078, 0, 0, 131079, 8, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 17, 0, 131089, 10, 0, 131090, 10, 0, 131091, 10, 0, 131092, 10, 0, 131093, 10, 0, 131094, 10, 0, 131095, 10, 0, 262131, 10, 0, 262132, 1, 0, 262133, 16, 0, 262134, 15, 0, 262135, 15, 0, 262136, 14, 0, 262137, 1, 0, 262138, 1, 0, 262139, 1, 0, 262140, 1, 0, 262141, 1, 0, 262142, 1, 0, 262143, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 4, 0, 196613, 0, 0, 196614, 0, 0, 196615, 8, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 17, 0, 196625, 10, 0, 196626, 10, 0, 196627, 10, 0, 196628, 10, 0, 196629, 10, 0, 196630, 10, 0, 196631, 10, 0, 327667, 10, 0, 327668, 1, 0, 327669, 17, 0, 327670, 10, 0, 327671, 10, 0, 327672, 13, 0, 327673, 1, 0, 327674, 2, 0, 327675, 2, 0, 327676, 2, 0, 327677, 2, 0, 327678, 2, 0, 327679, 2, 0, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 3, 0, 262149, 0, 0, 262150, 0, 0, 262151, 9, 0, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 262155, 2, 0, 262156, 2, 0, 262157, 2, 0, 262158, 2, 0, 262159, 1, 0, 262160, 17, 0, 262161, 10, 0, 262162, 10, 0, 262163, 10, 0, 262164, 10, 0, 262165, 10, 0, 262166, 10, 0, 262167, 10, 0, 393203, 10, 0, 393204, 1, 0, 393205, 17, 0, 393206, 10, 0, 393207, 10, 0, 393208, 13, 0, 393209, 1, 0, 393210, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 8, 0, 327696, 17, 0, 327697, 10, 0, 327698, 10, 0, 327699, 10, 0, 327700, 10, 0, 327701, 10, 0, 327702, 10, 0, 327703, 10, 0, 458739, 10, 0, 458740, 1, 0, 458741, 17, 0, 458742, 10, 0, 458743, 10, 0, 458744, 13, 0, 458745, 1, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 8, 0, 393232, 17, 0, 393233, 10, 0, 393234, 10, 0, 393235, 10, 0, 393236, 10, 0, 393237, 10, 0, 393238, 10, 0, 393239, 10, 0, 524275, 10, 0, 524276, 1, 0, 524277, 17, 0, 524278, 10, 0, 524279, 10, 0, 524280, 13, 0, 524281, 1, 0, 524282, 6, 0, 524283, 6, 0, 524284, 6, 0, 524285, 6, 0, 524286, 6, 0, 524287, 6, 0, 458752, 6, 0, 458753, 6, 0, 458754, 6, 0, 458755, 6, 0, 458756, 5, 0, 458757, 0, 0, 458758, 0, 0, 458759, 7, 0, 458760, 6, 0, 458761, 6, 0, 458762, 6, 0, 458763, 6, 0, 458764, 6, 0, 458765, 6, 0, 458766, 6, 0, 458767, 1, 0, 458768, 17, 0, 458769, 10, 0, 458770, 10, 0, 458771, 10, 0, 458772, 10, 0, 458773, 10, 0, 458774, 10, 0, 458775, 10, 0, 589811, 10, 0, 589812, 1, 0, 589813, 18, 0, 589814, 11, 0, 589815, 11, 0, 589816, 12, 0, 589817, 1, 0, 589818, 1, 0, 589819, 1, 0, 589820, 1, 0, 589821, 1, 0, 589822, 1, 0, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 4, 0, 524293, 0, 0, 524294, 0, 0, 524295, 8, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 17, 0, 524305, 10, 0, 524306, 10, 0, 524307, 10, 0, 524308, 10, 0, 524309, 10, 0, 524310, 10, 0, 524311, 10, 0, 655347, 10, 0, 655348, 1, 0, 655349, 1, 0, 655350, 1, 0, 655351, 1, 0, 655352, 1, 0, 655353, 1, 0, 655354, 1, 0, 655355, 16, 0, 655356, 14, 0, 655357, 1, 0, 655358, 1, 0, 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 4, 0, 589829, 0, 0, 589830, 0, 0, 589831, 8, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 17, 0, 589841, 10, 0, 589842, 10, 0, 589843, 10, 0, 589844, 10, 0, 589845, 10, 0, 589846, 10, 0, 589847, 10, 0, 720883, 10, 0, 720884, 1, 0, 720885, 1, 0, 720886, 1, 0, 720887, 1, 0, 720888, 1, 0, 720889, 1, 0, 720890, 1, 0, 720891, 18, 0, 720892, 12, 0, 720893, 1, 0, 720894, 1, 0, 720895, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 4, 0, 655365, 0, 0, 655366, 0, 0, 655367, 8, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 17, 0, 655377, 10, 0, 655378, 10, 0, 655379, 10, 0, 655380, 10, 0, 655381, 10, 0, 655382, 10, 0, 655383, 10, 0, 786419, 10, 0, 786420, 1, 0, 786421, 1, 0, 786422, 1, 0, 786423, 1, 0, 786424, 1, 0, 786425, 1, 0, 786426, 1, 0, 786427, 1, 0, 786428, 1, 0, 786429, 1, 0, 786430, 1, 0, 786431, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 4, 0, 720901, 0, 0, 720902, 0, 0, 720903, 8, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 17, 0, 720913, 10, 0, 720914, 10, 0, 720915, 10, 0, 720916, 10, 0, 720917, 10, 0, 720918, 10, 0, 720919, 10, 0, 851955, 10, 0, 851956, 10, 0, 851957, 10, 0, 851958, 10, 0, 851959, 10, 0, 851960, 10, 0, 851961, 10, 0, 851962, 10, 0, 851963, 10, 0, 851964, 10, 0, 851965, 10, 0, 851966, 10, 0, 851967, 10, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 4, 0, 786437, 0, 0, 786438, 0, 0, 786439, 8, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 10, 0, 786445, 10, 0, 786446, 10, 0, 786447, 10, 0, 786448, 10, 0, 786449, 10, 0, 786450, 10, 0, 786451, 10, 0, 786452, 10, 0, 786453, 10, 0, 786454, 10, 0, 786455, 10, 0, 917503, 10, 0, 851968, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 4, 0, 851973, 0, 0, 851974, 0, 0, 851975, 8, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 10, 0, 983039, 10, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 4, 0, 917509, 0, 0, 917510, 0, 0, 917511, 8, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 10, 0, 1048575, 10, 0, 983040, 1, 0, 983041, 1, 0, 983042, 2, 0, 983043, 2, 0, 983044, 3, 0, 983045, 0, 0, 983046, 0, 0, 983047, 9, 0, 983048, 2, 0, 983049, 2, 0, 983050, 1, 0, 983051, 1, 0, 983052, 10, 0, 1114111, 10, 0, 1048576, 1, 0, 1048577, 4, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 8, 0, 1048587, 1, 0, 1048588, 10, 0, 1179647, 10, 0, 1114112, 1, 0, 1114113, 4, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 8, 0, 1114123, 1, 0, 1114124, 10, 0, 1245183, 10, 0, 1179648, 1, 0, 1179649, 4, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 8, 0, 1179659, 1, 0, 1179660, 10, 0, 1310719, 10, 0, 1245184, 1, 0, 1245185, 4, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 8, 0, 1245195, 1, 0, 1245196, 10, 0, 1376255, 10, 0, 1310720, 1, 0, 1310721, 1, 0, 1310722, 6, 0, 1310723, 6, 0, 1310724, 6, 0, 1310725, 6, 0, 1310726, 6, 0, 1310727, 6, 0, 1310728, 6, 0, 1310729, 6, 0, 1310730, 1, 0, 1310731, 1, 0, 1310732, 10, 0, 1441791, 10, 0, 1376256, 1, 0, 1376257, 1, 0, 1376258, 1, 0, 1376259, 1, 0, 1376260, 1, 0, 1376261, 1, 0, 1376262, 1, 0, 1376263, 1, 0, 1376264, 1, 0, 1376265, 1, 0, 1376266, 1, 0, 1376267, 1, 0, 1376268, 10, 0, 1507327, 10, 0, 1441792, 1, 0, 1441793, 1, 0, 1441794, 1, 0, 1441795, 1, 0, 1441796, 1, 0, 1441797, 1, 0, 1441798, 1, 0, 1441799, 1, 0, 1441800, 1, 0, 1441801, 1, 0, 1441802, 1, 0, 1441803, 1, 0, 1441804, 10, 0, 1572863, 10, 0, 1507328, 1, 0, 1507329, 1, 0, 1507330, 1, 0, 1507331, 1, 0, 1507332, 1, 0, 1507333, 1, 0, 1507334, 1, 0, 1507335, 1, 0, 1507336, 1, 0, 1507337, 1, 0, 1507338, 1, 0, 1507339, 1, 0, 1507340, 10, 0, 1638399, 10, 0, 1572864, 10, 0, 1572865, 10, 0, 1572866, 10, 0, 1572867, 10, 0, 1572868, 10, 0, 1572869, 10, 0, 1572870, 10, 0, 1572871, 10, 0, 1572872, 10, 0, 1572873, 10, 0, 1572874, 10, 0, 1572875, 10, 0, 1572876, 10, 0 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 96, 96 )
_sections_unfolded = [ "Transform", "collision" ]

[node name="Camera2D" type="Camera2D" parent="." index="2"]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="CameraTween" type="Tween" parent="Camera2D" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="." index="3"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Fade" type="Sprite" parent="CanvasLayer" index="0"]

visible = false
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 100, 100 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="FadeTween" type="Tween" parent="CanvasLayer/Fade" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="collided" from="Player" to="." method="_on_Player_collided"]

[connection signal="moved" from="Player" to="." method="_on_Player_moved"]

[connection signal="tween_completed" from="CanvasLayer/Fade/FadeTween" to="." method="_on_FadeTween_tween_completed"]


